hw12_13_14_15_calendar/deployments/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-api-deployment
  namespace: calendar-app
  labels:
    app: calendar-api
    db: calendar-db
spec:
  selector:
    matchLabels:
      app: calendar-api
      db: calendar-db
  replicas: 1
  template:
    metadata:
      labels:
        app: calendar-api
        db: calendar-db
    spec:
      containers:
      - name: calendar-api
        image: calendar:develop
        ports:
        - containerPort: 80
      containers:
      - name: calendar-db
        image: postgres
        ports:
        - containerPort: 5432
        readinessProbe: 
          tcpSocket: 
            port: 5432
          initialDelaySeconds: 15
          periodSeconds: 10
