hw12_13_14_15_calendar/deployments/kube/deployment_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-api-deployment
  namespace: calendar-app
  labels:
    app: calendar-api    
spec:
  selector:
    matchLabels:
      app: calendar-api      
  replicas: 1
  template:
    metadata:
      labels:
        app: calendar-api        
    spec:
      containers:
        - name: calendar-api
          image: calendar:develop
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /isready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /isready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
