hw12_13_14_15_calendar/deployments/kube/deployment_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-db-deployment
  namespace: calendar-app
  labels:
    db: calendar-db    
spec:
  selector:
    matchLabels:      
      db: calendar-db
  replicas: 1
  template:
    metadata:
      labels:        
        db: calendar-db
    spec:
      containers:      
      - name: calendar-db
        image: postgres
        ports:
        - containerPort: 5432
        readinessProbe: 
          tcpSocket: 
            port: 5432
          initialDelaySeconds: 15
          periodSeconds: 10
