hw12_13_14_15_calendar/deployments/kube/deployment_rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-rabbitmq-deployment
  namespace: calendar-app
  labels:
    rabbitmq: calendar-rabbitmq
spec:
  selector:
    matchLabels:      
      rabbitmq: calendar-rabbitmq
  replicas: 1
  template:
    metadata:
      labels:        
        rabbitmq: calendar-rabbitmq
    spec:
      containers:      
      - name: calendar-rabbitmq
        image: rabbitmq:3-management        
        ports:
          - name: http
            protocol: TCP
            containerPort: 15672
          - name: amqp
            protocol: TCP
            containerPort: 5672
        livenessProbe:
          exec:            
            command: ["rabbitmq-diagnostics", "status"]
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 15
        readinessProbe:
          exec:            
            command: ["rabbitmq-diagnostics", "ping"]
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 10
