hw12_13_14_15_calendar/deployments/kube/service_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-api-service
  namespace: calendar-app
spec:
  selector:
    app: calendar-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

###

apiVersion: v1
kind: Service
metadata:
  name: calendar-scheduler-service
spec:
  selector:
    scheduler: calendar-scheduler  

###

apiVersion: v1
kind: Service
metadata:
  name: calendar-sender-service
spec:
  selector:
    sender: calendar-sender
