hw12_13_14_15_calendar/deployments/kube/service_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-db-service
  namespace: calendar-app
spec:
  selector:
    db: calendar-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
