hw12_13_14_15_calendar/deployments/kube/service_rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-rabbitmq-service
  namespace: calendar-rabbitmq
spec:
  selector:
    rabbitmq: calendar-rabbitmq
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672
    - protocol: TCP
      port: 5672
      targetPort: 5672
